themes/mumble/static/css/mumble.css
body {
	font-family: 'Roboto', sans-serif;
	background-color: #F2F2F2;
}

a {
	color: black;
}

.logo {
	grid-template: "logo";
	align-self: center;
	justify-self: center;
	height: 100px;
	width: 100px;
	background: url(mumble.svg) no-repeat;
	background-size: 100px;
}

h1 {
	grid-template: "header";
	font-size: 200%;
	align-self: center;
	padding-left: 10px;
}

h1 a {
	text-decoration: none;
}

h1 > sub {
	display: block;
	font-size: 16px;
	font-weight: lighter;
}

header {
	background-color: #F2F2F2;
	border-bottom: 1px solid #D2D2D2;
}

#header-content {
	max-width: 1140px;
	padding: 10px;
	margin: auto;
	display: grid;
	grid-template-areas: "logo header nav";
}

nav {
	grid-template: "nav";
	text-align: right;
	align-self: center;
}

ul.menu {
	list-style-type: none;
	margin: 0;
	padding: 0;
}

ul.menu li {
	display: inline-block;
}

ul.menu li a {
	display: inline-block;
	color: black;
	text-align: center;
	padding: 14px 16px;
	text-decoration: none;
}

ul.menu li a:hover {
	text-decoration: underline;
}

footer {
	padding: 20px;
	background-color: #F2F2F2;
	border-top: 1px solid #D2D2D2;

	font-size: 14px;
	line-height: 16px;
}

.footer-content {
	max-width: 1140px;
	margin: auto;
}

.footer-content ul {
	display: inline-block;
	list-style-type: none;
	margin: 0;
	padding: 0;
}

.footer-content ul li {
	display: inline-block;
	float: left;
}

.footer-content ul li a {
	display: inline-block;
	color: black;
	text-align: center;
	padding: 14px 16px 0px 0px;
	text-decoration: none;
}

.footer-content .copyleft {
	font-weight: lighter;
}

.download-items * {
	margin-bottom: 20px;
}

.download-button {
	background-color: #4CAF50;
	color: white;
	font-size: 20px;
	padding: 20px;
	border-radius: 15px;
	width: 150px;
	cursor: pointer;
	text-align: center;
}

.download-text {
	font-size: 1.5em;
}

.download-subtext {
	font-size: 16px;
	font-weight: lighter;
	line-height: 16px;
}

.download-screenshot {
	box-shadow: 5px 5px 30px 0px #888888;
}

.content-container {
	background-color: white;
	padding: 40px;
}

.content {
	margin: auto;
	max-width: 1140px;
}

.download-container {
	display: flex;
}

.download-container-left {
	flex: 33;
}

.download-container-right {
	flex: 66;
	text-align: center;
}

.markdown-body ul {
	list-style-type: disc;
}

#bloglist > div {
	margin-top: 30px;
}

#bloglist > div:nth-child(1) {
	margin-top: 0;
}

